--- a/server/static/css/index.css
+++ b/server/static/css/index.css
@@ -116,6 +116,17 @@ body {
 .viewer {
 	width: 100%;
 	flex: 1;
+	position: relative;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.viewer #imgViewer {
+	position: absolute;
+	max-width: 100%;
+	max-height: 100%;
+	object-position: center;
 }
 
 .dDialogScreen {
@@ -176,4 +187,12 @@ body {
 	color: #BDBDBD;
 	width: 100%;
 	text-align: center;
+}
+
+.control-bar .hint h2 {
+	height: 64px;
+	line-height: 64px;
+	vertical-align: middle;
+	color: #ddd;
+	font-weight: lighter;
 }
