Resizing image before sending channels back.

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -21,9 +21,9 @@
 			</div>
 			<div class="color-controls">
 				<label>CHANNELS</label>
-				<button class="toggle blue" onclick="btnToggleChannelClicked(this, 'B')"></button>
-				<button class="toggle green" onclick="btnToggleChannelClicked(this, 'G')"></button>
-				<button class="toggle red" onclick="btnToggleChannelClicked(this, 'R')"></button>
+				<button class="toggle blue active" onclick="btnToggleChannelClicked(this, 'B')"></button>
+				<button class="toggle green active" onclick="btnToggleChannelClicked(this, 'G')"></button>
+				<button class="toggle red active" onclick="btnToggleChannelClicked(this, 'R')"></button>
 			</div>
 		</div>
 	</div>
