Error handling done for when user deletes image manually.

--- a/server/static/css/index.css
+++ b/server/static/css/index.css
@@ -167,7 +167,7 @@ body {
 	cursor: pointer;
 	border-radius: 4px;
 	color: rgb(192, 33, 33);
-	visibility: none;
+	display: none;
 }
 
 @-webkit-keyframes pulse {
